Bug 34362 - Editing: Setting table border from toolbar resets "spacing to content"
Summary: Editing: Setting table border from toolbar resets "spacing to content"
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: x86-64 (AMD64) Windows (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-16 16:35 UTC by Gavos
Modified: 2021-02-23 08:44 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
See Comment 1 (48.23 KB, application/vnd.oasis.opendocument.text)
2011-02-16 23:27 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gavos 2011-02-16 16:35:16 UTC
Steps to reproduce the bug:

- create a one-cell table and fill with some text
- right-click on it, "Table...", tab "Borders", in part "Spacing to content uncheck "Synchronize", increase the left spacing to say 0.5cm, and validate
- select the whole table with Ctrl+A
- in the Table toolbar, click on the "Borders" button and select no border

The left spacing has been reset to 0.1cm
Comment 1 Rainer Bielefeld Retired 2011-02-16 23:26:26 UTC
[Reproducible] with "LibreOffice 3.3.1 RC1 – WIN7  Home Premium  (64bit) German UI [OOO330m19 (build 7 / tag 3.3.1.1)]", for details pls. see attached "sample4.odt"!
Comment 2 Rainer Bielefeld Retired 2011-02-16 23:27:03 UTC
Created attachment 43474 [details]
See Comment 1
Comment 3 Björn Michaelsen 2011-12-23 11:48:38 UTC Comment hidden (obsolete)
Comment 4 Gavos 2012-01-09 13:58:22 UTC
Reproduced in 3.5.0 beta1.
Comment 5 Michael Stahl 2012-05-22 11:44:22 UTC
hmm.. interesting, if the padding is synchronized (same in all
directions, then the toolbar button does not change it,
but if it is not synchronized, apparently the bottom
padding is applied to all directions...

happens in OOo 3.4beta and 3.0.1 as well
Comment 6 Jean-Baptiste Faure 2014-03-05 05:57:00 UTC
Still reproducible in LO 4.2.3.0.0+ (Linux / Ubuntu 13.10)

Best regards. JBF
Comment 7 Matthew Francis 2014-07-27 13:19:40 UTC
Still reproducible (and annoying) in LO 4.2.5.2 / OSX
Comment 8 Rodolfo 2016-05-16 05:31:41 UTC
I wrote a patch to solve this issue.
https://gerrit.libreoffice.org/#/c/24764/

Hopefully, someone will review and merge it to base code. =)
Comment 9 Commit Notification 2016-05-30 13:18:54 UTC
Rodolfo Ribeiro Gomes committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea7de7b2d3dc62b2ae73c2184398b227f8a85890

fdo#34362 Setting table border from toolbar resets "spacing to content"

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-06-07 08:09:36 UTC
Rodolfo Ribeiro Gomes committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0006c15d8a496b7544beb09ba4de6bde866c13b0&h=libreoffice-5-2

tdf#34362 Setting table border from toolbar resets "spacing to content"

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Jean-Baptiste Faure 2016-06-17 04:03:32 UTC
Verified fixed in Version: 5.2.0.0.beta2+
Build ID: c10153d0ef46527232adb9c4574a79940d978175
built at home under Ubuntu_16.04_x86-64

Best regards. JBF
Comment 12 bancam 2021-02-23 08:44:01 UTC Comment hidden (spam)