fdo#34362 Setting table border from toolbar resets "spacing to content"

Change-Id: Iec51c02ab389015d268849aa0dda870c11323f46
Signed-off-by: Rodolfo Ribeiro Gomes <rodolforg@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/24764
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>